--- a/portfolio_app/templates/all_templates/index.html
+++ b/portfolio_app/templates/all_templates/index.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Caleb Odinga- Portfolio</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="index.css">
-
-</head>
-
-<body id="index">
+<div id="index">
   <!--THis part creates the nav bar, including logo and nav link buttons-->
   <div class="container-md-fluid row">
-    <div id="navbar" class="row">
-      <a href="index.html"><span id="logo">Azgad</span></a><em>--More than you know...</em>
-      <button><a href="#aboutme" class="active">Know Me</a></button>
-      <button><a href="projects.html">Projects</a></button>
-      <button><a href="hobbies.html">Fun Side</a></button>
-      <button><a href="#contact">Let's Talk</a></button>
-    </div>
     <div id="landing" class="row">
       <!-- This part defines the langing page, banner, What a usersees immediately they visit the site-->
       <span id="face"></span>
@@ -37,7 +16,8 @@
         </p>
       </span>
       <div id="description">
-        <p>My Mantra is <strong>"Believe"</strong>If you want something really really bad, Then it will find its way to
+        <p>My Mantra is <strong>"Believe"</strong>If you want something really really bad, Then it will find its way
+          to
           you. Some call it <em>Law of attraction</em> <br /> I choose to believe.<br />
           If you Believe, you work Extra, You are always ready to collaborate, learn and try.</p>
       </div>
@@ -54,7 +34,8 @@
           Little did i know just how small i was interacting with this Enormous world of Technology</p>
         <p id="Education">
           <h2>Education</h2>
-          My love for Technology started when i joined campus, where i studied Business in information Technology, for 2
+          My love for Technology started when i joined campus, where i studied Business in information Technology, for
+          2
           semesters. I later saw that i could learn way more in another way so i defered.
           It is at <strong>Moringa School</strong> that i gained the basic fundamentals skills. Focus at Moringa is
           Learning to Learn and developing the <strong>Problem solving Mentality</strong>. I got to
@@ -62,7 +43,8 @@
         </p>
         <p id="Career">
           <h3>Career</h3>
-          My first job was as a gardener, then a messenger. I later joined an Ecommerce company as a field intern. Years
+          My first job was as a gardener, then a messenger. I later joined an Ecommerce company as a field intern.
+          Years
           of work resulted tome being promoted to customer service, then with training a Field Operations officer.
           My job had me encouter all type of persons thus knowing how do work together with them and ensuring that you
           part ways at a point where you can work with them again- was paramount.
@@ -97,138 +79,4 @@
       <img alt="premiere pro" src="images/premierepro.png">
     </div>
     <button id="projectstab"><a href="projects.html">Projects</a></button>
-    <div id="contact" class="row">
-      <!--This part illustrates the contact page. On can choose to click on the email and it automaticall opens the users email provider,
-     call or use the contact form to talk to the site owner. The form should be able to send information to sites backend and trigger notification to the owner. For future development-->
-      <div id="cred">
-        <p>
-          <h3>Phone Number:</h3>+254768156350 or +254702845998
-        </p>
-        <p>
-          <h3>Email Address</h3><a href="mailto:calemasanga@gmail.com">calemasanga@gmail.com</a>
-        </p>
-      </div>
-      <p id="social">
-        <span id="twitter">
-          <caption><img src="images/twitter.png" alt="@Sir_odinga">@Sir_odinga</caption>
-        </span>
-        <span id="github">
-          <caption><img src="images/github.png" alt="@Sir_odinga">@COdingaorg</caption>
-        </span>
-        <span id="whatsapp">
-          <caption><img src="images/WhatsApp.svg" alt="@Sir_odinga">+254702845998</caption>
-        </span>
-      </p>
-      <div id="contactform">
-        <label>Contact Me</label>
-        <!--This form added here is a skeleton ofwhat is to be built. Action and method functiona are currently not working but will be made right in the future-->
-        <table>
-          <form target="_blank" method="POST">
-            <tr>
-              <td>Name : </td>
-              <td><input type="text" id="name" name="officialName" placeholder="official names please"></td>
-            </tr>
-            <tr>
-              <td>Subject : </td>
-              <td><input type="text" length="20"></td>
-            </tr>
-            <tr>
-              <td>Message : </td>
-              <td><textarea type="text" placeholder="Give detailed information on your subject"></textarea></td>
-            </tr>
-            <tr>
-              <td><input type="submit" placeholder="SUBMIT"></td>
-            </tr>
-          </form>
-        </table>
-      </div>
-    </div>
-    <p id="copy">&copy;copyright: Caleb Odinga 2021</p>
-    <!--nmAIL CHIMP FEEDBACK FORM-->
-    <!-- Begin Mailchimp Signup Form -->
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-      #mc_embed_signup {
-        background: #fff; 
-        clear: left;
-        font: 14px Helvetica, Arial, sans-serif;
-      }
-
-      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
-    <div id="mc_embed_signup">
-      <form
-        action="https://moringaschool.us1.list-manage.com/subscribe/post?u=174a56398a62346a043ebcc8f&amp;id=1b87154668"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-        novalidate>
-        <div id="mc_embed_signup_scroll">
-          <h2>Subscribe</h2>
-          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-          <div class="mc-field-group">
-            <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-            </label>
-            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-          </div>
-          <div class="mc-field-group">
-            <label for="mce-FNAME">First Name </label>
-            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-          </div>
-          <div class="mc-field-group size1of2">
-            <label for="mce-PHONE">Phone Number </label>
-            <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
-          </div>
-          <div class="mc-field-group size1of2">
-            <label for="mce-MMERGE2-month">Cake day <span class="asterisk">*</span>
-            </label>
-            <div class="datefield">
-              <span class="subfield dayfield"><input class="birthday required" type="text" pattern="[0-9]*" value=""
-                  placeholder="DD" size="2" maxlength="2" name="MMERGE2[day]" id="mce-MMERGE2-day"></span> /
-              <span class="subfield monthfield"><input class="birthday required" type="text" pattern="[0-9]*" value=""
-                  placeholder="MM" size="2" maxlength="2" name="MMERGE2[month]" id="mce-MMERGE2-month"></span>
-              <span class="small-meta nowrap">( dd / mm )</span>
-            </div>
-          </div>
-          <div class="mc-field-group">
-            <label for="mce-MMERGE7">Your Message </label>
-            <input type="text" value="" name="MMERGE7" class="" id="mce-MMERGE7">
-          </div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div>
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-              name="b_174a56398a62346a043ebcc8f_1b87154668" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-              class="button"></div>
-        </div>
-      </form>
-    </div>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-    <script type='text/javascript'>
-      (function ($) {
-        window.fnames = new Array();
-        window.ftypes = new Array();
-        fnames[0] = 'EMAIL';
-        ftypes[0] = 'email';
-        fnames[1] = 'FNAME';
-        ftypes[1] = 'text';
-        fnames[4] = 'PHONE';
-        ftypes[4] = 'phone';
-        fnames[2] = 'MMERGE2';
-        ftypes[2] = 'birthday';
-        fnames[7] = 'MMERGE7';
-        ftypes[7] = 'text';
-      }(jQuery));
-      var $mcj = jQuery.noConflict(true);
-    </script>
-    <!--End mc_embed_signup-->
-
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
   </div>
-</body>
-
-</html>
