extends base template to all templates

--- a/portfolio_app/templates/all_templates/base.html
+++ b/portfolio_app/templates/all_templates/base.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-  {% includes 'navbar.html' %}
+  {% include 'all_templates/navbar.html' %}
   {% block content %}
 
   {% endblock %}
-  {% include 'footer.html' %}
+  {% include 'all_templates/footer.html' %}
 </body>
 
 </html>
