--- a/portfolio_app/templates/all_templates/hobbies.html
+++ b/portfolio_app/templates/all_templates/hobbies.html
@@ -1,3 +1,8 @@
+{% extends 'all_templates/base.html' %}
+{% load static %}
+{% load bootstrap4 %}
+
+{% block content%}
 <!--Add the page's body-->
 <div id="fun">
   <div id="overlay">
@@ -37,54 +42,4 @@
         </audio>
       </div>
     </div>
-    <hr />
-    <!--<iframe src="https://giphy.com/embed/14u2ZI1XhkoZCU" width="30%" frameBorder="0" class="giphy-embed"></iframe>-->
-    <div id="contact">
-      <!--This part illustrates the contact page. On can choose to click on the email and it automaticall opens the users email provider,
-call or use the contact form to talk to the site owner. The form should be able to send information to sites backend and trigger notification to the owner. For future development-->
-      <div id="cred">
-        <p>
-          <h3>Phone Number:</h3>+254768156350 or +254702845998
-        </p>
-        <p>
-          <h3>Email Address</h3><a href="mailto:calemasanga@gmail.com">calemasanga@gmail.com</a>
-        </p>
-      </div>
-      <p id="social">
-        <span id="twitter">
-          <caption><img src="images/twitter.png" alt="@Sir_odinga">@Sir_odinga</caption>
-        </span>
-        <span id="github">
-          <caption><img src="images/github.png" alt="@Sir_odinga">@COdingaorg</caption>
-        </span>
-        <span id="whatsapp">
-          <caption><img src="images/WhatsApp.svg" alt="@Sir_odinga">+254702845998</caption>
-        </span>
-      </p>
-      <div id="contactform">
-        <label>Contact Me</label>
-        <!--This form added here is a skeleton ofwhat is to be built. Action and method functiona are currently not working but will be made right in the future-->
-        <table>
-          <form target="_parent" method="POST">
-            <tr>
-              <td>Name : </td>
-              <td><input type="text" id="name" name="officialName" placeholder="official names please"></td>
-            </tr>
-            <tr>
-              <td>Subject : </td>
-              <td><input type="text" length="20"></td>
-            </tr>
-            <tr>
-              <td>Message : </td>
-              <td><textarea type="text" placeholder="Give detailed information on your subject"></textarea></td>
-            </tr>
-            <tr>
-              <td><input type="submit" placeholder="SUBMIT"></td>
-            </tr>
-          </form>
-        </table>
-      </div>
-    </div>
-    <p id="copy">&copy;copyright: Caleb Odinga 2021</p>
-  </div>
-</div>
+  {%endblock%}
