--- a/portfolio_app/templates/all_templates/projects.html
+++ b/portfolio_app/templates/all_templates/projects.html
@@ -1,3 +1,8 @@
+{% extends 'all_templates/base.html' %}
+{% load static %}
+{% load bootstrap4 %}
+
+{% block content%}
 <div id="banner">
   <!--This adds display banner. Future developments to make it a slide show-->
   <caption>
@@ -141,3 +146,4 @@ The class vertical rule is for adding a line, as in the design-->
       It also has my contacts through which one can reach out.</p>
   </div>
 </div><a href="projects.html#navbar" id="projectstab">&UpArrowBar;Back Top</a>
+{%endblock%}
