--- a/portfolio_app/templates/all_templates/base.html
+++ b/portfolio_app/templates/all_templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +15,7 @@
   {% block styles %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="index.css">
+  <link type="text/css" rel="stylesheet" href="{% static 'css/index.css' %}">
 
   {%endblock%}
 
