--- a/portfolio_app/templates/all_templates/navbar.html
+++ b/portfolio_app/templates/all_templates/navbar.html
@@ -1,7 +1,7 @@
 <div id="navbar" class="row">
-  <a href="index.html"><span id="logo">Azgad</span></a><em>--More than you know...</em>
-  <button><a href="#aboutme" class="active">Know Me</a></button>
-  <button><a href="projects.html">Projects</a></button>
-  <button><a href="hobbies.html">Fun Side</a></button>
-  <button><a href="#contact">Let's Talk</a></button>
+  <a href="/"><span id="logo">Azgad</span></a><em>--More than you know...</em>
+  <button><a href="#background" class="active">Know Me</a></button>
+  <button><a href="{% url 'project'%}">Projects</a></button>
+  <button><a href="{% url 'hobby' %}">Fun Side</a></button>
+  <button><a href="{% url 'contact' %}">Let's Talk</a></button>
 </div>
