adds profile page to edit portfolio details

--- a/portfolio_app/templates/all_templates/profile.html
+++ b/portfolio_app/templates/all_templates/profile.html
@@ -1,8 +1,45 @@
-{% extends 'all_templates/base.html' %}
+{% extends 'all_templates/profile_links.html' %}
 {% load static %}
 {% load bootstrap4 %}
 
-{% block content%}
+{% block content %}
+<div class="col-md-12 main_page">
+  <div class="col-md-12 playlist">
 
+    {% if user_profile%}
+    {% if posts%}
+    {% for post in posts %}
+
+
+    <div class="card col-md-3">
+      <a href="{% url 'single_movie' movie.movie_id %}">
+        <div class="card-image" style="background-image: url('https://www.themoviedb.org/t/p/w220_and_h330_face{{movie.poster_path}}');
+                                height: 200px;
+                                background-size: contain;
+                                background-position: center;
+                                background-repeat: no-repeat;
+                                ">
+        </div>
+
+        <div class="card-footer">
+          <p class="text-center bold">{{post.title}}</p>
+          <h6>Added {{post.date_added|timesince}} ago</h6>
+          <button class="btn btn-danger remove-btn">Remove</button>
+        </div>
+    </div>
+    </a>
+
+
+    {%endfor%}
+    {%else%}
+    <p class="text-center">No Posts made</p>
+    {%endif%}
+    {%else%}
+    <p class="text-center">Add Your Profile to Proceed</p>
+
+    {%endif%}
+
+  </div>
+</div>
 
 {%endblock%}
