--- a/portfolio_app/templates/all_templates/base.html
+++ b/portfolio_app/templates/all_templates/base.html
@@ -13,8 +13,10 @@
   <title>Caleb Odinga Portfolio</title>
   {% endif %}
   {% block styles %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/styles.css'%}">
   <link type="text/css" rel="stylesheet" href="{% static 'css/index.css' %}">
 
   {%endblock%}
