--- a/portfolio_app/templates/all_templates/index.html
+++ b/portfolio_app/templates/all_templates/index.html
@@ -10,21 +10,11 @@
       <!-- This part defines the langing page, banner, What a usersees immediately they visit the site-->
       <span id="face"></span>
       <span class="greeting">
-        <p>
-          <strong>Hello there!</strong> Welcome to my site, where i try to explain <em>Who i am,</em><em> What i am
-            about, </em>and <em> How i go about</em>,
-          my career and daily life. I will be as detailed as i possibly can but if you need clarification, you can
-          always <a href="#contact">contact me</a>
-        </p>
-        <p>
-          My name is Caleb Odinga, Currently, I am Front-End developer, Focusing on HTML,CSS and JS.
-        </p>
+        <h4 class="intro_mess">{{profile.intro_message}}</h4>
+        <p class="tagline">{{profile.tagline}}</p>
       </span>
       <div id="description">
-        <p>My Mantra is <strong>"Believe"</strong>If you want something really really bad, Then it will find its way
-          to
-          you. Some call it <em>Law of attraction</em> <br /> I choose to believe.<br />
-          If you Believe, you work Extra, You are always ready to collaborate, learn and try.</p>
+        <p>{{profile.mantra}}</p>
       </div>
     </div>
     <hr />
