--- a/portfolio_app/templates/all_templates/profile_links.html
+++ b/portfolio_app/templates/all_templates/profile_links.html
@@ -29,21 +29,21 @@
   <div class="d-flex flex-column profile">
     <div class="col-md-11">
       <div class="col-md-3 left_profile">
-        {% if not user_profile %}
+        {% if not profile %}
         <div class="prof_image">
         </div>
         {%else%}
-        <div class="prof_image" style="background-image: url('{{user_profile.photo_path.url}}');
+        <div class="prof_image" style="background-image: url('{{profile.photo_path.url}}');
                background-position: center;
                background-size: contain;
                background-repeat:no-repeat;">
         </div>
 
         {%endif%}
-        <p>{{request.user.first_name}}-{{request.user.last_name}}</p>
+        <p>{{user.first_name}}-{{user.last_name}}</p>
         <!--if it is the owner, edit profile, else, follow-->
-        {%if user_profile %}
-        {% if request.user.id != user_profile.user.id%}
+        {%if profile %}
+        {% if user.id != profile.user.id%}
         {%else%}
         <strong>
           <button type="button" class="btn btn-default m-2" data-toggle="modal" data-target="#exampleModalLong"
@@ -65,39 +65,33 @@
             <p class="p-auto">Dashboard</p>
           </a>
 
-          <a href="home" class="btn btn_control redirect_btn col-md-8">
+          <a href="{% url 'background' %}" class="btn btn_control redirect_btn col-md-8">
             <p class="p-auto">Background Form</p>
           </a>
           <div class="skills d-flex flex-row align-items-center justify-content-center">
-            <a href="home" class="btn btn_control redirect_btn col-md-8">
+            <a href="{% url 'skills'%}" class="btn btn_control redirect_btn col-md-8">
               <p class="p-auto">Skills</p>
             </a>
-            <a href="home" class="btn btn_control redirect_btn col-md-8">
+            <a href="{% url 'tools'%}" class="btn btn_control redirect_btn col-md-8">
               <p class="p-auto">Tools</p>
             </a>
           </div>
           <div class="skills d-flex flex-row align-items-center justify-content-center">
-            <a href="home" class="btn btn_control redirect_btn col-md-8">
+            <a href="{% url 'contact'%}" class="btn btn_control redirect_btn col-md-8">
               <p class="p-auto">Contact</p>
             </a>
-            <a href="home" class="btn btn_control redirect_btn col-md-8">
+            <a href="{% url 'social'%}" class="btn btn_control redirect_btn col-md-8">
               <p class="p-auto">Social</p>
             </a>
           </div>
-          <a href="home" class="btn btn_control redirect_btn col-md-8">
+          <a href="{% url 'hobbyform'%}" class="btn btn_control redirect_btn col-md-8">
             <p class="p-auto">Hobby Form</p>
           </a>
-          <a href="home" class="btn btn_control redirect_btn col-md-8">
+          <a href="{% url 'projectform'%}" class="btn btn_control redirect_btn col-md-8">
             <p class="p-auto">Add Projects</p>
           </a>
 
         </div>
-
-        <a href="" class="border bo btn_control redirect_btn p-2">
-          <p>Logout</p>
-        </a>
-
-
       </div>
       <div class="col-md-9 right_profile">
         <div class="col-md-12 title_profile">
@@ -108,7 +102,7 @@
           {%endfor%}
           <div class="col-md-8">
             <h3>Profile Account - {{request.user.username}}</h3>
-            <i>{% if user_profile %} {{user_profile.bio}} {%else%} 'No bio Added'{%endif%}</i>
+            <i>{% if profile %} {{profile.bio}} {%else%} 'No bio Added'{%endif%}</i>
           </div>
           <div class="col-md-3 d-flex flex-row">
             <a href="#" class="btn btn_control redirect_btn col-md-8">
@@ -119,67 +113,14 @@
 
           </div>
         </div>
+        <div class="col-md-12 main_page">
 
-        {% block content %}
+          {% block content %}
 
-        {%endblock%}
-      </div>
-    </div>
-    <div class="col-md-12 recc">
-      {% if user_profile%}
-      {% if recc_items%}
-      {% for community in recc_items %}
-
-      {{community.name}}
-
-      {%endfor%}
-      {%else%}
-      <p class="text-center">No Communities in Recommendation</p>
-      {%endif%}
-      {%else%}
-      <p class="text-center">Add Your Profile to Proceed</p>
-
-      {%endif%}
-    </div>
-
-    <!--Modal Window-->
-    <!-- Button trigger modal -->
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title text-center" id="exampleModalLongTitle">Update Profile</h5><img
-              src="{% if user_profile %}{{user_profile.photo_path.url}}{%else%}../../../static/images/human-avatar-profle.png{%endif%}"
-              alt="" class="ml-5 mr-5" width="30px" height="30px" style="background-color: white; border-radius: 50%;">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          {% for message in messages%}
-          <div class="alert a btn_control">
-            {{message}}
-          </div>
-          {%endfor%}
-          <form action="" method="POST" enctype="multipart/form-data">
-            {%csrf_token%}
-            <div class="modal-body">
-              <!--Update profile form-->
-              {{form.as_p}}
-              <!--end of form -->
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="close btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-outline-success">Save changes</button>
-            </div>
-          </form>
+          {%endblock%}
         </div>
       </div>
     </div>
-    <!--End of modal window-->
 
     {%block scripts%}
     {%bootstrap_javascript%}
