--- a/portfolio_app/templates/all_templates/background.html
+++ b/portfolio_app/templates/all_templates/background.html
@@ -3,6 +3,22 @@
 {% load bootstrap4 %}
 
 {% block content %}
-  
-
+<h4>{{title.capitalize}}</h4>
+{% for message in messages%}
+<div class="alert a btn_control">
+  {{message}}
+</div>
+{%endfor%}
+<form action="" method="POST">
+  {%csrf_token%}
+  <div class="modal-body">
+    <!--Update profile form-->
+    {{form.as_p}}
+    <!--end of form -->
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="close btn btn-secondary" data-dismiss="modal">Close</button>
+    <button type="submit" name="update_profile" class="btn btn-outline-success">Save changes</button>
+  </div>
+</form>
 {%endblock%}
