--- a/portfolio_app/templates/all_templates/profile_links.html
+++ b/portfolio_app/templates/all_templates/profile_links.html
@@ -29,18 +29,27 @@
   <div class="d-flex flex-column profile">
     <div class="col-md-11">
       <div class="col-md-3 left_profile">
-        {% if not profile %}
-        <div class="prof_image">
+        {% if profile.photo_path %}
+        <div class="image_profile">
+          <div class="sitted_image" style="background-image: url('{{profile.photo_path.url}}');
+               background-position: center;
+               background-size: contain;
+               background-repeat:no-repeat;
+               width: 100%;
+               height: 100%;">
+          </div>
         </div>
         {%else%}
-        <div class="prof_image" style="background-image: url('{{profile.photo_path.url}}');
+        <div class="prof_image2">
+          <div style="background-image: url('{{profile.photo_path.url}}');
                background-position: center;
                background-size: contain;
                background-repeat:no-repeat;">
+          </div>
         </div>
 
         {%endif%}
-        <p>{{user.first_name}}-{{user.last_name}}</p>
+        <p>{{user.first_name}} {{user.last_name}}</p>
         <!--if it is the owner, edit profile, else, follow-->
         {%if profile %}
         {% if user.id != profile.user.id%}
