--- a/portfolio_app/templates/all_templates/navbar.html
+++ b/portfolio_app/templates/all_templates/navbar.html
@@ -4,11 +4,38 @@
     <h6>More than you know...</h6>
   </div>
   <div class="nav_items">
-    <button><a href="#background" class="active">Know Me</a></button>
-    <button><a href="{% url 'project'%}">Projects</a></button>
-    <button><a href="{% url 'hobby' %}">Fun Side</a></button>
-    <button><a href="{% url 'contact' %}">Let's Talk</a></button>
 
-    <button><a href="{% url 'profile' %}">Profile</a></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent navbar-custom p-0">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'index' %}"><button>Home</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'project'%}"><button>Projects</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'hobby' %}"><button>Fun Side</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'contact' %}"><button>Let's Talk</button></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' %}"><button>Profile</button></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
+   
+    
+    
+    
+
+    
   </div>
 </div>
