--- a/portfolio_app/templates/all_templates/project_form.html
+++ b/portfolio_app/templates/all_templates/project_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load bootstrap4 %}
 
-{% block content %}
+{% block content %}{{form.media}}
 <h4>{{title.capitalize}}</h4>
 {% for message in messages%}
 <div class="alert a btn_control">
@@ -13,12 +13,13 @@
   {%csrf_token%}
   <div class="modal-body">
     <!--Update profile form-->
+    
     {{form.as_p}}
     <!--end of form -->
   </div>
   <div class="modal-footer">
     <button type="button" class="close btn btn-secondary" data-dismiss="modal">Close</button>
-    <button type="submit" name="skills" class="btn btn-outline-success">Save changes</button>
+    <button type="submit" name="update_profile" class="btn btn-outline-success">Save changes</button>
   </div>
 </form>
 {%endblock%}
